# ai-tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  QUICKSTART.md  README.md  plan.md  pyproject.toml  requirements.txt  spec.md  tasks.md
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: test.yml
.specify/: USAGE.md
.specify/memory/: constitution.md
_legacy/chains/: knowledge.py
_legacy/db/: postgres.py
_legacy/models/: __init__.py  llm_config.py  query_request.py
_legacy/services/: embeddings.py  llm_client.py
_legacy/tests/fixtures/: sample_queries.json
_legacy/tests/performance/: test_search_latency.py
_legacy/tests/unit/: test_llm_client.py  test_multi_turn_chain.py  test_router_chain.py  test_sqlite.py  test_text_to_sql_chain.py
_legacy/utils/: errors.py  prompts.py
config/: .env.example  settings.py
docs/: MCP_SETUP.md  embedding-api-guide.md  embedding-faq.md  embedding-model.md  embedding-troubleshooting.md  pyproject.toml
docs/물어보새-분석/: 01-전체-개요.md  02-아키텍처-오픈소스.md  03-핵심기술-스택-오픈소스.md  04-구현-가이드-오픈소스.md  05-성능-최적화-오픈소스.md
infra/docker/: .env.example  docker-compose.yml
rag-chatbot/: .env.example  Dockerfile  mcp_config.json
rag-chatbot/src/: __init__.py  config.py  main.py
rag-chatbot/src/guardrails/: __init__.py  sensitive.py
rag-chatbot/src/handlers/: __init__.py  base.py  dm.py  feedback.py  mention.py
rag-chatbot/src/llm/: __init__.py  claude_client.py  prompts.py
rag-chatbot/src/models/: __init__.py  attachment.py  conversation.py  feedback.py  query.py  response.py  search_result.py
rag-chatbot/src/services/: __init__.py  conversation.py  feedback.py  image_processor.py  rag_service.py
rag-chatbot/src/utils/: __init__.py  message_splitter.py  reaction.py
rag-chatbot/tests/unit/: test_guardrails.py  test_models.py  test_performance.py  test_prompts.py
rag-indexer/: README.md  config.yaml.example  coverage.json  pyproject.toml
rag-indexer/src/: __init__.py  cli.py  config.py  logging_config.py  storage.py
rag-indexer/src/connectors/: __init__.py  notion.py  swagger.py
rag-indexer/src/models/: __init__.py  chunk.py  document.py  source.py  sync_job.py
rag-indexer/src/scheduler/: __init__.py  sync_scheduler.py
rag-indexer/src/services/: __init__.py  ai_extractor.py  chunker.py  embedder.py  indexer.py
rag-indexer/src/utils/: __init__.py  rate_limit.py  retry.py
rag-indexer/tests/: conftest.py
rag-indexer/tests/integration/: __init__.py  test_cli_integration.py  test_indexing_pipeline.py  test_swagger_pipeline.py
rag-indexer/tests/unit/: test_ai_extractor.py  test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_models.py  test_notion_connector.py  test_rate_limit.py  test_retry.py  test_storage.py  test_swagger_connector.py  test_sync_job.py
scripts/: download_embedding_model.py  example_usage.py  index_documents.py  init_vector_store.py  test_claude_connection.py  validate_embedding_model.py  validate_embedding_quality.py
shared/: pyproject.toml
shared/shared/: __init__.py  embedding.py  vector_store.py
shared/tests/: test_embedding.py  test_vector_store.py
specs/001-claude-huggingface-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-claude-huggingface-migration/checklists/: requirements.md
specs/001-claude-huggingface-migration/contracts/: llm-service.yaml
specs/002-embedding-validation/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-rag-indexer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-indexer/checklists/: requirements.md
specs/004-rag-indexer/contracts/: cli-commands.md  search-api.yaml
specs/005-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/chains/: knowledge.py  multi_turn.py  router.py  text_to_sql.py
src/db/: sqlite.py
src/models/: embedding.py  llm_config.py  query_request.py  query_response.py
src/services/: embeddings.py  vector_store.py
src/utils/: errors.py  logging.py
tests/: conftest.py
tests/benchmarks/: test_embedding_accuracy.py
tests/benchmarks/data/: documents.json
tests/fixtures/: korean_fixtures.py  mock_chromadb.py  mock_huggingface.py  mock_responses.json  test_mocks.py
tests/integration/: test_knowledge_e2e.py  test_text_to_sql_e2e.py
tests/unit/: test_embeddings.py  test_errors.py  test_knowledge_chain.py  test_llm_client.py  test_multi_turn_chain.py  test_text_to_sql_chain.py  test_vector_store.py
(+4 files in other folders)
