[project]
name = "rag-indexer"
version = "0.1.0"
description = "RAG Document Indexing Pipeline - Notion, Swagger to Vector DB"
requires-python = ">=3.10"
dependencies = [
    "rag-shared",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "notion-client>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "langchain-text-splitters>=0.0.1",
    "apscheduler>=3.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
rag-indexer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
